// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 01: Unclosed string literal should not swallow document 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content) (MISSING ")))))) (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(ERROR (key (id)) (string_content))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 02: Single equals in if condition should parse as comparison 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (if_statement condition: (expression (comparison_expression (expression (atom (id))) (ERROR) (expression (atom (string))))) consequence: (procedure (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id)))))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (if_statement (ERROR (expression (atom (id)))) condition: (expression (atom (string))) consequence: (procedure (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id)))))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 03: Missing colon after top-level key should preserve nested block 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) (MISSING :) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))))) (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) (ERROR (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))) (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 04: Missing colon after if condition should not swallow document 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (if_statement condition: (expression (member_expression (expression (atom (at_id (id)))) (id))) (ERROR) consequence: (procedure (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id)))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(ERROR (key (id) (id)) (key (id)) (ERROR (expression (member_expression (expression (atom (at_id (id)))) (id))) (id) (expression (member_expression (expression (atom (at_id (id)))) (id))) (expression (atom (id))) (id)) (expression (member_expression (expression (atom (at_id (id)))) (id))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 05: Standalone else should not become mapping key 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (ERROR (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) (ERROR)) (mapping_element key: (key (id)) block_value: (mapping (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id)))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 06: Incomplete comparison should not insert MISSING 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (if_statement condition: (expression (comparison_expression (expression (member_expression (expression (atom (at_id (id)))) (id))) (ERROR))) consequence: (procedure (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id)))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (if_statement condition: (expression (comparison_expression (expression (member_expression (expression (atom (at_id (id)))) (id))) (expression (atom (MISSING id))))) consequence: (procedure (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id)))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 07: Arrow with empty body should preserve procedure 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) block_value: (procedure (ERROR))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR)) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 08: Mixed sequence and mapping should not destroy sequence 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) block_value: (sequence (sequence_element colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))) (ERROR (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (sequence_element colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 09: Missing run target should not swallow document 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (run_statement target: (expression (atom (ERROR)))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (run_statement (ERROR (expression (atom (id)))) target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 10: Set with double equals should not swallow document 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (ERROR (expression (comparison_expression (expression (member_expression (expression (atom (at_id (id)))) (id))) (expression (atom (string (string_content))))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(ERROR (key (id) (id)) (key (id)) (expression (comparison_expression (expression (member_expression (expression (atom (at_id (id)))) (id))) (ERROR (expression (atom (string (string_content)))) (id)) (expression (member_expression (expression (atom (at_id (id)))) (id))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 11: With clause missing equals should not swallow document 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))) block_value: (procedure (with_statement param: (id) (MISSING =) value: (expression (atom (string (string_content))))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(ERROR (key (id) (id)) (key (id)) (expression (member_expression (expression (atom (at_id (id)))) (id))) (ERROR (id) (string (string_content)) (id) (id) (id)) (id))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 12: Transition to without target should not swallow document 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (transition_statement with_to_statement_list: (with_to_statement_list (to_statement (ERROR)))) (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (transition_statement with_to_statement_list: (with_to_statement_list (to_statement (ERROR (expression (atom (id)))) target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 13: If with body at same indent should not swallow document 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (if_statement condition: (expression (member_expression (expression (atom (at_id (id)))) (id))) (ERROR)) (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id)))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(ERROR (key (id) (id)) (key (id)) (ERROR (expression (member_expression (expression (atom (at_id (id)))) (id))) (id) (expression (member_expression (expression (atom (at_id (id)))) (id))) (expression (atom (id))) (id)) (expression (member_expression (expression (atom (at_id (id)))) (id))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 14: Incomplete binary expression should not cascade 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (binary_expression (expression (atom (number))) (ERROR))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (binary_expression (expression (atom (number))) (ERROR (expression (atom (id)))) (expression (atom (string (string_content))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 15: Unclosed parenthesis should not cascade 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (parenthesized_expression expression: (expression (binary_expression (expression (atom (id))) (expression (atom (id))))) (ERROR))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(ERROR (key (id)) (expression (binary_expression (expression (atom (id))) (ERROR (expression (atom (id))) (id)) (expression (atom (string (string_content)))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 16: Unclosed bracket should not cascade 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (list (expression (atom (number))) (expression (atom (number))) (expression (atom (number))) (ERROR)))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(ERROR (key (id)) (expression (atom (number))) (expression (atom (number))) (ERROR (expression (atom (number))) (id)) (expression (atom (string (string_content)))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 17: Unclosed brace should not cascade 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (dictionary (dictionary_pair key: (key (id)) value: (expression (atom (number)))) (ERROR)))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(ERROR (key (id)) (dictionary_pair key: (key (id)) (ERROR (expression (atom (number))) (id)) value: (expression (atom (string (string_content))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 18: Trailing dot should not cascade 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (ERROR))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (expression (member_expression (expression (atom (at_id (id)))) (id)))) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 19: Member access with number should not split expression 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (ERROR (number)))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (expression (atom (at_id (id))))) colinear_value: (expression_with_to expression: (expression (atom (number))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 20: At sign without identifier should not cascade 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (at_id (ERROR)))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (expression (atom (at_id (id))))) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 21: Single-quoted string should not reinterpret as identifier 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (id))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (UNEXPECTED ''') (expression (atom (id))) (UNEXPECTED '''))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 22: Trailing comma should be valid syntax 1`] = `
{
  "match": true,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (call_expression function: (expression (atom (id))) argument: (expression (atom (id))) argument: (expression (atom (id))) argument: (expression (atom (MISSING id))))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (call_expression function: (expression (atom (id))) argument: (expression (atom (id))) argument: (expression (atom (id))) argument: (expression (atom (MISSING id))))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 23: Empty parentheses should be valid syntax 1`] = `
{
  "match": true,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (parenthesized_expression expression: (expression (atom (MISSING id))))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (parenthesized_expression expression: (expression (atom (MISSING id))))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 24: Unsupported modulo should not split expression 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (id)))) (ERROR (id))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (expression (atom (id))) (UNEXPECTED '%')) colinear_value: (expression_with_to expression: (expression (atom (id))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 25: Incomplete ternary should not cascade 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (ternary_expression consequence: (expression (atom (id))) condition: (expression (atom (id))) (ERROR))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (expression (atom (id))) (expression (atom (id))) (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 26: Unclosed template expression should preserve template 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (template (template_content) (template_expression expression: (expression (member_expression (expression (atom (at_id (id)))) (id))) (ERROR (id)) (MISSING }))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) (ERROR (template_content) (expression (member_expression (expression (atom (at_id (id)))) (id))) (id)) block_value: (procedure (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 27: Empty template expression should not insert MISSING 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (template (template_content) (template_expression (ERROR)) (template_content)) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (template (template_content) (template_expression expression: (expression (atom (MISSING id)))) (template_content)) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 28: Invalid escape sequence should not error inside string 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content) (ERROR)))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content) (ERROR (UNEXPECTED 'x') (id))))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 29: Extra closing delimiter should not destroy value 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (parenthesized_expression expression: (expression (binary_expression (expression (atom (id))) (expression (atom (id)))))))) (ERROR)) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (expression (parenthesized_expression expression: (expression (binary_expression (expression (atom (id))) (expression (atom (id))))))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 30: Three-word key should not error inside mapping element 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) (MISSING :) colinear_value: (expression_with_to expression: (expression (atom (id)))) (ERROR) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))))) (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) (ERROR (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))))) (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 31: Keyword as key should not swallow document 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (if_statement (ERROR (string)) (ERROR)) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(ERROR (ERROR (expression (atom (string (string_content)))) (expression (atom (id)))) (expression (atom (string (string_content)))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 32: Hyphenated identifier should parse as key 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id))) (ERROR (id) (string)) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (ERROR (expression (binary_expression (expression (atom (id))) (expression (atom (id))))) (string (string_content))) (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 33: Digit-starting identifier should not reinterpret as separate key 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (ERROR) (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
  "treeSitter": "(source_file (ERROR (expression (atom (number)))) (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 34: Empty procedure after arrow should not lose procedure 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (ERROR))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) (ERROR)) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > error_recovery.txt > Error 35: Unsupported for statement should not reinterpret as mapping key 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (procedure (ERROR (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) (ERROR)) (ERROR (key (id) (id))) (mapping_element key: (key (id) (id)) block_value: (mapping (run_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id)))))) (transition_statement with_to_statement_list: (with_to_statement_list (to_statement target: (expression (member_expression (expression (atom (at_id (id)))) (id))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > errors.txt > Error: Multiple Variable Modifiers 1`] = `
{
  "match": true,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (variable_declaration (ERROR (expression (atom (id)))) type: (expression (atom (id))) default: (expression (atom (string (string_content))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (variable_declaration (ERROR (expression (atom (id)))) type: (expression (atom (id))) default: (expression (atom (string (string_content))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > missing_colon.txt > Missing colon before arrow should not cascade to sibling blocks 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) (MISSING :) block_value: (procedure (template (template_content)))) (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (id)))) block_value: (mapping (with_statement param: (id) value: (expression (atom (ellipsis)))))))))))) (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) (ERROR (id)) block_value: (procedure (template (template_content)))) (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (id)))) block_value: (mapping (with_statement param: (id) value: (expression (atom (ellipsis)))))))))) (mapping_element key: (key (id) (id))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > missing_colon.txt > Missing colon before arrow should produce MISSING node 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) (MISSING :) block_value: (procedure (template (template_content)))) (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (id)))) block_value: (mapping (with_statement param: (id) value: (expression (atom (ellipsis))))))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) (ERROR (id)) block_value: (procedure (template (template_content)))) (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (id)))) block_value: (mapping (with_statement param: (id) value: (expression (atom (ellipsis))))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > missing_colon.txt > Missing colon before at-expression should produce MISSING node 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) block_value: (mapping (mapping_element key: (key (id)) (MISSING :) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (id)))) block_value: (mapping (with_statement param: (id) value: (expression (atom (ellipsis)))))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (id)))) block_value: (mapping (with_statement param: (id) value: (expression (atom (ellipsis))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id)) (ERROR (key (id) (ERROR) (id)) (id)) block_value: (mapping (with_statement param: (id) value: (expression (atom (ellipsis)))) (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (member_expression (expression (atom (at_id (id)))) (id)))) block_value: (mapping (with_statement param: (id) value: (expression (atom (ellipsis))))))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > missing_colon.txt > Missing colon before indented block should produce MISSING node 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id)) (MISSING :) (comment) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (variable_declaration type: (expression (atom (id))) default: (expression (atom (string)))))))))",
  "treeSitter": "(source_file (ERROR (id)) (comment) (mapping (mapping_element key: (key (id)) colinear_value: (variable_declaration type: (expression (atom (id))) default: (expression (atom (string)))))))",
}
`;

exports[`parser parity: tree-sitter vs parser-js > missing_colon.txt > Missing colon with two-word key 1`] = `
{
  "match": false,
  "parserTs": "(source_file (mapping (mapping_element key: (key (id) (id)) (MISSING :) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))))) (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
  "treeSitter": "(source_file (mapping (mapping_element key: (key (id) (id)) (ERROR (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content)))))) (mapping_element key: (key (id) (id)) block_value: (mapping (mapping_element key: (key (id)) colinear_value: (expression_with_to expression: (expression (atom (string (string_content))))))))))",
}
`;
